# vrep_youbot_plugin

./: CMakeLists.txt  README.md  manifest.xml  package.xml
include/: extApiCustomConst.h  v_repConst.h  v_repExtyouBot.h  v_repLib.h  v_repTypes.h
include/vrep_plugin/: VRepPluglet.h  VRepPlugletRegistry.h
include/vrep_plugin/lua/: GenericLuaCallback.h  GenericLuaFunctionRegistry.h
include/vrep_plugin/ros/: RosLuaCallback.h  VRepRosPluglet.h
include/vrep_plugin/ros/callback/: ClockCallback.h  JointControlCallback.h  LaserScanCallback.h  PointCloudCallback.h  SwedishBaseControllerCallback.h
include/vrep_plugin/ros/pluglet/: ClockPluglet.h  JointControlPluglet.h  LaserScanPluglet.h  PointCloudPluglet.h  SwedishBaseControllerPluglet.h
launch/: vrep_youbot.launch
models/: youbot_arm.ttm
scenes/: youbot_00.ttt  youbot_arm.ttt  youbot_arm_trajectory.ttt  youbot_dev.ttt  youbot_scence.ttt  youbot_scene.ttt
src/: VRepPluglet.cpp  VRepPlugletRegistry.cpp  v_repExtyouBot.cpp  v_repLib.cpp
src/lua/: GenericLuaCallback.cpp  GenericLuaFunctionRegistry.cpp
src/ros/: RosLuaCallback.cpp  VRepRosPluglet.cpp
src/ros/callback/: ClockCallback.cpp  JointControlCallback.cpp  LaserScanCallback.cpp  PointCloudCallback.cpp  SwedishBaseControllerCallback.cpp
src/ros/pluglet/: ClockPluglet.cpp  JointControlPluglet.cpp  LaserScanPluglet.cpp  PointCloudPluglet.cpp  SwedishBaseControllerPluglet.cpp
test/: test_base.sh  test_gripper_position.sh  test_joint_position.sh
